# CannotMax

./: .gitignore  README.md  WinningRate_Statistics.py  auto_fetch.py  callbacks.py  config.py  data_module.py  iron_shark_launcher.bat  loadData.py  logger_utils.py  login.py  maa_adb_connector.py  main.py  main.spec  main_sim.py  monster_greenvine.csv  multi_instance.py  pixi.toml  predict.py  predict_onnx.py  pyproject.toml  recognize.py  start_gradio.py  train.py  train_new.py  training_module.py  【脚本】铁鲨鱼启动！(带PyTorch版本选择版).bat
.github/workflows/: build-and-release.yml
conf/: config.yaml
conf/data/: data.yaml
conf/logger/: composite.yaml  csv.yaml  swanlab.yaml  tensorboard.yaml  wandb.yaml
conf/model/: model.yaml
conf/runtime/: runtime.yaml
conf/trainer/: trainer.yaml
config/: gradio_config.yaml
data/: 数据合并.py
data_train/: unpackage.py  数据合并.py
gradio_ml/: __main__.py
gradio_ml/adapter/: ml_framework_adapter.py  model_adapter.py
gradio_ml/infrastructure/: config_manager.py  log_buffer.py  metric_store.py  models.py  queues.py  session_manager.py
gradio_ml/presentation/: app.py  predict_tab.py  train_monitor_tab.py
gradio_ml/service/: log_service.py  metric_service.py  predict_service.py  train_control_service.py
models/: model.py  muon.py
skills/maaframework/: GENERATION.md  SKILL.md
src/core/: config.py  (+1 more)
tests/: test_log_buffer.py  test_log_service.py  test_metric_service.py  test_metric_store.py  test_models.py  test_predict_service.py  test_session_manager.py  test_train_control_service.py
tools/: convert_to_onnx.py  package.py
(+25 files in other folders)
