[project]
name = "CannotMax-Honeydew"
version = "1.0.3"
description = "这是一个基于深度学习的明日方舟游戏辅助工具，用于自动识别游戏画面中的单位并预测战斗结果。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "onnxruntime",
    "opencv-python",
    "pandas",
    "pillow",
    "pyqt6",
    "rapidocr",
    "scikit-learn",
    "seaborn",
    "windows-capture",
    "toml",
]

[dependency-groups]
dev = [
    "onnx>=1.19.0",
    "pyinstaller>=6.15.0",
]

[project.optional-dependencies]
cpu = [
  "torch",
  "torchvision",
]
cuda = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[tool.uv]
python-install-mirror = "https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/"
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cuda", extra = "cuda" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cuda", extra = "cuda" },
]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
